Create Remote Object managers and use them in orchestration from RemoteClusterStateService (#13924) (#14188)
* Create Remote Object managers and use them in orchestration from RemoteClusterStateService

Signed-off-by: Shivansh Arora <hishiv@amazon.com>
Co-authored-by: Shivansh Arora <hishiv@amazon.com>
Signed-off-by: kkewwei <kkewwei@163.com>